@@ -1,3 +1,7 @@
+2005-12-24  Karl Runge <runge@karlrunge.com>
+	* x11vnc: enhance -passwdfile features, filetransfer on by default,
+	  call rfbRegisterTightVNCFileTransferExtension() earlier.
+
 2005-11-28  Karl Runge <runge@karlrunge.com>
 	* x11vnc: add -loop option.
 
