@@ -1,3 +1,6 @@
+2005-12-24  Karl Runge <runge@karlrunge.com>
+	* x11vnc: enhance -passwdfile features, filetransfer on by default.
+
 2005-12-19  Dave Stuart <dave@justdave.us>
 	* libvncserver/{main.c,rfbserver.c,cargs.c}, rfb/rfb.h: introduce
 	  deferPtrUpdateTime, which defers the handling of pointer events
